🔤 Fix Text Align For Flashcard

--- a/src/components/FlashCard.module.sass
+++ b/src/components/FlashCard.module.sass
@@ -44,6 +44,9 @@
 			align-items: center
 			justify-content: space-between
 
+			p.card-text
+				text-align: center
+
 			.details
 				position: absolute
 				top: 1rem
